# rufus_filter

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt
src/parser/: AlignmentParser.hpp  FastQParser.hpp  HashParser.hpp
src/util/: commandline_parser.cpp  commandline_parser.h  noncopyable.hpp  thread_pool.hpp  types.h
tests/: CMakeLists.txt  FastQParserTests.hpp  FilterTests.hpp  HashParserTests.hpp  gtest_main.cpp
tools/: CMakeLists.txt  rufus_filter.cpp
